# chat-grpc

./: CLAUDE.md  Makefile  README.md  TUTORIAL.md  pyproject.toml
protos/: chat.proto
src/: chat_pb2.py  chat_pb2_grpc.py  fastapi_server.py  grpc_server.py
static/: index.html
